--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "eslint-plugin-vue": "^6.1.2",
     "file-loader": "^5.0.2",
     "lint-staged": "^9.5.0",
+    "path-to-regexp": "^6.1.0",
     "prettier": "^1.19.1",
     "sass": "^1.25.0",
     "sass-loader": "^8.0.2",
