--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@vue/cli-plugin-vuex": "^4.2.0",
     "@vue/cli-service": "^4.2.0",
     "@vue/eslint-config-prettier": "^6.0.0",
+    "axios": "^0.19.2",
     "babel-eslint": "^10.0.3",
     "babel-plugin-component": "^1.1.1",
     "css-loader": "^3.4.2",
@@ -30,6 +31,7 @@
     "eslint-plugin-vue": "^6.1.2",
     "file-loader": "^5.0.2",
     "lint-staged": "^9.5.0",
+    "mockjs": "^1.1.0",
     "path-to-regexp": "^6.1.0",
     "prettier": "^1.19.1",
     "sass": "^1.25.0",
