--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "eslint-plugin-prettier": "^3.1.1",
     "eslint-plugin-vue": "^6.1.2",
     "file-loader": "^5.0.2",
+    "js-cookie": "^2.2.1",
     "lint-staged": "^9.5.0",
     "mockjs": "^1.1.0",
     "path-to-regexp": "^6.1.0",
