--- a/package.json
+++ b/package.json
@@ -13,16 +13,18 @@
     "normalize.css": "^8.0.1",
     "vue": "^2.6.11",
     "vue-router": "^3.1.5",
-    "vuex": "^3.1.2"
+    "vuex": "^3.1.2",
+    "axios": "^0.19.2",
+    "js-cookie": "^2.2.1"
   },
   "devDependencies": {
+    "@babel/register": "^7.8.3",
     "@vue/cli-plugin-babel": "^4.2.0",
     "@vue/cli-plugin-eslint": "^4.2.0",
     "@vue/cli-plugin-router": "^4.2.0",
     "@vue/cli-plugin-vuex": "^4.2.0",
     "@vue/cli-service": "^4.2.0",
     "@vue/eslint-config-prettier": "^6.0.0",
-    "axios": "^0.19.2",
     "babel-eslint": "^10.0.3",
     "babel-plugin-component": "^1.1.1",
     "css-loader": "^3.4.2",
@@ -30,7 +32,6 @@
     "eslint-plugin-prettier": "^3.1.1",
     "eslint-plugin-vue": "^6.1.2",
     "file-loader": "^5.0.2",
-    "js-cookie": "^2.2.1",
     "lint-staged": "^9.5.0",
     "mockjs": "^1.1.0",
     "path-to-regexp": "^6.1.0",
